# deepagents-okf-backend

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
examples/: composite_knowledge.py  quickstart.py  real_agent.py
src/deepagents_okf_backend/: __init__.py  backend.py  frontmatter.py  okf.py  query.py
tests/: test_backend_async.py  test_backend_binary.py  test_backend_io.py  test_frontmatter.py  test_okf.py  test_query.py  test_robustness.py  test_security.py
tests/fixtures/sample_bundle/: index.md
tests/fixtures/sample_bundle/metrics/: weekly_active_users.md
tests/fixtures/sample_bundle/tables/: orders.md
