[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "deepagents-okf-backend"
version = "0.1.0"
description = "OKF-aware virtual filesystem backend for LangChain Deep Agents (Open Knowledge Format)."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [{ name = "Emanuele Ielo", email = "emanueleielo@gmail.com" }]
keywords = ["deepagents", "langchain", "okf", "open-knowledge-format", "agent", "backend", "llm"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "deepagents>=0.6",
    "langchain-core>=0.3",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff>=0.6",
    "mypy>=1.10",
    "types-PyYAML>=6.0",
]

[project.urls]
Homepage = "https://github.com/emanueleielo/deepagents-okf-backend"
Repository = "https://github.com/emanueleielo/deepagents-okf-backend"
Issues = "https://github.com/emanueleielo/deepagents-okf-backend/issues"
"OKF spec" = "https://cloud.google.com/blog/products/data-analytics/how-the-open-knowledge-format-can-improve-data-sharing"

[tool.hatch.build.targets.wheel]
packages = ["src/deepagents_okf_backend"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.10"
strict = true
ignore_missing_imports = true
